--- a/templates/mdex_installer.properties.j2
+++ b/templates/mdex_installer.properties.j2
@@ -4,7 +4,7 @@ USER_INSTALL_DIR={{ base_root }}
 
 #Install
 #-------
-{% if not mdex_version is match("^[1-6].[0-5].[0-2]") %}
+{% if mdex_version.split('.')[0] | int >= 11 %}
 
 -fileOverwrite_{{ mdex_path }}/Uninstall/Uninstall_Oracle Commerce MDEX Engine {{ mdex_version }} x64 Edition.lax=Yes
 
